--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body {
   background-color: #ffffff;
 }
 
+hr {
+  margin: 0px;
+  border-color: #ececec46;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -28,31 +33,59 @@ body {
 
 /* Header */
 .header {
-  padding: 25px 0px;
+  padding: 25px 0px 0px 0px;
 }
-.header__top, .header__bottom {
+
+.header__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 30px;
 }
+
+.header__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .header__left, .header__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
+
 .header__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 38px;
 }
+
 .header__form {
-  width: 30vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   border-radius: 3px;
 }
+
 .header__input {
-  width: 100%;
+  width: 280px;
   height: 100%;
   padding: 0px 16px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   border: 1px solid #e6e6e6;
   border-right: unset;
   border-left: unset;
@@ -80,14 +113,19 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.025em;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .logo img {
   margin-right: 13px;
 }
+
 .logo__text {
   margin-right: 37px;
-  align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 .form__btn {
@@ -95,12 +133,14 @@ body {
   line-height: 32px;
   padding: 0px 11px;
   background-color: #cdcdcc;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#f5f5f5));
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: unset;
   font-weight: 300;
   letter-spacing: 0.025em;
   border: 1px solid #e6e6e6;
 }
+
 .form__btn:hover {
   border: 1px solid red;
 }
@@ -115,6 +155,7 @@ body {
   margin-right: 26px;
   margin-left: 10px;
 }
+
 .btn__account {
   min-width: 123px;
   padding: 0px 11px;
@@ -125,5 +166,112 @@ body {
   color: #ffffff;
   background-color: #f16d7f;
   border: 1px solid #f16d7f;
-  box-sizing: border-box;
-}/*# sourceMappingURL=style.css.map */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.nav__link {
+  display: inline-block;
+  background-color: unset;
+  border: unset;
+  text-transform: uppercase;
+  font-family: Lato;
+  font-weight: 700;
+  padding: 20px 24px;
+}
+
+.bg {
+  background-color: #e8e8e8;
+}
+
+.brand {
+  height: 665px;
+  background-image: url(/img/man.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.brand__block {
+  padding-top: 224px;
+}
+
+.brand__text {
+  border-left: 12px solid #f16d7f;
+  display: block;
+  font-family: Lato;
+  font-size: 40px;
+  line-height: 1.2;
+  font-weight: 900;
+  letter-spacing: 0.025em;
+  color: #222222;
+  padding-left: 12px;
+}
+
+.brand__primary {
+  font-size: 60px;
+}
+
+.hot {
+  margin-top: 98px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto auto;
+      grid-template-columns: auto auto;
+  -ms-grid-rows: 261px 261px 260px;
+      grid-template-rows: 261px 261px 260px;
+  gap: 20px;
+  margin-bottom: 100px;
+}
+
+.hot__mark {
+  text-transform: uppercase;
+  position: absolute;
+  top: 27px;
+  padding: 16px 20px;
+  background-color: #ffffff;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #222222;
+}
+
+.hot__mark .pink {
+  display: block;
+  font-size: 30px;
+  color: #f16d7f;
+}
+
+.hot__img {
+  position: relative;
+}
+
+.hot__img1 {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
+.hot__img3 {
+  -ms-grid-row: 3;
+  grid-row: 3/3;
+}
+
+.hot__img4 {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+/*# sourceMappingURL=style.css.map */
