--- a/css/style.scss
+++ b/css/style.scss
@@ -15,6 +15,12 @@ body {
   font-family: Lato;
   background-color: $bg;
 }
+
+hr {
+  margin: 0px;
+  border-color: #ececec46;
+}
+
 .container {
   max-width: 1140px;
   margin: 0 auto;
@@ -32,11 +38,16 @@ body {
 
 /* Header */
 .header {
-  padding: 25px 0px;
-  &__top,
-  &__bottom {
+  padding: 25px 0px 0px 0px;
+  &__top {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
+  }
+  &__bottom {
+    display: flex;
+
+    justify-content: center;
   }
 
   &__left,
@@ -50,14 +61,13 @@ body {
     height: 38px;
   }
   &__form {
-    width: 30vw;
     display: flex;
     flex-wrap: nowrap;
     border-radius: 3px;
   }
 
   &__input {
-    width: 100%;
+    width: 280px;
     height: 100%;
     padding: 0px 16px;
     box-sizing: border-box;
@@ -135,5 +145,95 @@ body {
     background-color: $pink;
     border: 1px solid $pink;
     box-sizing: border-box;
+  }
+}
+
+.nav {
+  &__list {
+    display: flex;
+    justify-content: space-around;
+  }
+  &__link {
+    display: inline-block;
+    background-color: unset;
+    border: unset;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 700;
+    padding: 20px 24px;
+  }
+}
+
+.bg {
+  background-color: #e8e8e8;
+}
+
+.brand {
+  height: 665px;
+  background-image: url(/img/man.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
+  &__block {
+    padding-top: 224px;
+  }
+
+  &__text {
+    border-left: 12px solid $pink;
+    display: block;
+    font-family: Lato;
+    font-size: 40px;
+    line-height: 1.2;
+    font-weight: 900;
+    letter-spacing: 0.025em;
+    color: $f1;
+    padding-left: 12px;
+  }
+  &__primary {
+    font-size: 60px;
+  }
+}
+
+.hot {
+  margin-top: 98px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 261px 261px 260px;
+  gap: 20px;
+  margin-bottom: 100px;
+
+  &__mark {
+    text-transform: uppercase;
+    position: absolute;
+    top: 27px;
+    padding: 16px 20px;
+    background-color: $bg;
+
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    color: $f1;
+    .pink {
+      display: block;
+      font-size: 30px;
+      color: $pink;
+    }
+  }
+
+  &__img {
+    position: relative;
+  }
+  &__img1 {
+    grid-row: 1 / 2;
+  }
+  &__img3 {
+    grid-row: 3/3;
+  }
+  &__img4 {
+    grid-column: 2;
+    grid-row: 2/3;
   }
 }
