--- a/css/style.css
+++ b/css/style.css
@@ -35,57 +35,33 @@ hr {
 .header {
   padding: 25px 0px 0px 0px;
 }
-
 .header__top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: 30px;
 }
-
 .header__bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .header__left, .header__right {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
 }
-
 .header__block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 38px;
 }
-
 .header__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
   border-radius: 3px;
 }
-
 .header__input {
   width: 280px;
   height: 100%;
   padding: 0px 16px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border: 1px solid #e6e6e6;
   border-right: unset;
   border-left: unset;
@@ -113,19 +89,14 @@ hr {
   text-transform: uppercase;
   letter-spacing: 0.025em;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .logo img {
   margin-right: 13px;
 }
-
 .logo__text {
   margin-right: 37px;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
 }
 
 .form__btn {
@@ -133,14 +104,12 @@ hr {
   line-height: 32px;
   padding: 0px 11px;
   background-color: #cdcdcc;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#f5f5f5));
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: unset;
   font-weight: 300;
   letter-spacing: 0.025em;
   border: 1px solid #e6e6e6;
 }
-
 .form__btn:hover {
   border: 1px solid red;
 }
@@ -155,7 +124,6 @@ hr {
   margin-right: 26px;
   margin-left: 10px;
 }
-
 .btn__account {
   min-width: 123px;
   padding: 0px 11px;
@@ -166,18 +134,13 @@ hr {
   color: #ffffff;
   background-color: #f16d7f;
   border: 1px solid #f16d7f;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .nav__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
-
 .nav__link {
   display: inline-block;
   background-color: unset;
@@ -199,11 +162,9 @@ hr {
   background-position: center;
   background-size: cover;
 }
-
 .brand__block {
   padding-top: 224px;
 }
-
 .brand__text {
   border-left: 12px solid #f16d7f;
   display: block;
@@ -215,23 +176,18 @@ hr {
   color: #222222;
   padding-left: 12px;
 }
-
 .brand__primary {
   font-size: 60px;
 }
 
 .hot {
   margin-top: 98px;
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-  -ms-grid-rows: 261px 261px 260px;
-      grid-template-rows: 261px 261px 260px;
+  grid-template-columns: auto auto;
+  grid-template-rows: 261px 261px 260px;
   gap: 20px;
   margin-bottom: 100px;
 }
-
 .hot__mark {
   text-transform: uppercase;
   position: absolute;
@@ -245,33 +201,22 @@ hr {
   letter-spacing: 0.025em;
   color: #222222;
 }
-
 .hot__mark .pink {
   display: block;
   font-size: 30px;
   color: #f16d7f;
 }
-
 .hot__img {
   position: relative;
 }
-
 .hot__img1 {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
+  grid-row: 1/2;
 }
-
 .hot__img3 {
-  -ms-grid-row: 3;
   grid-row: 3/3;
 }
-
 .hot__img4 {
-  -ms-grid-column: 2;
   grid-column: 2;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
   grid-row: 2/3;
 }
 
@@ -283,7 +228,6 @@ hr {
   color: #222222;
   text-align: center;
 }
-
 .featured__p {
   text-align: center;
   margin-top: 16px;
@@ -293,7 +237,6 @@ hr {
   letter-spacing: 0.025em;
   color: #9f9f9f;
 }
-
 .featured__item {
   margin-top: 19px;
   margin-bottom: 17px;
@@ -304,7 +247,6 @@ hr {
   color: #222222;
   margin-left: 10px;
 }
-
 .featured__price {
   font-family: Lato;
   font-size: 16px;
@@ -313,12 +255,10 @@ hr {
   text-transform: uppercase;
   color: #f16d7f;
 }
-
 .featured__card {
   margin-top: 60px;
   margin-right: 5px;
 }
-
 .featured__browse {
   margin: 0 auto;
   width: 212px;
@@ -330,45 +270,29 @@ hr {
   letter-spacing: 0.025em;
   color: #ffffff;
   border: unset;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 113px;
 }
-
 .featured__browse .fa {
   margin-top: 1px;
   margin-left: 9px;
 }
-
 .featured__flex {
   margin-bottom: 79px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .sale {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  margin-bottom: 97px;
 }
-
 .sale__art-block {
   position: relative;
 }
-
 .sale__offer {
   margin-left: 36px;
   margin-top: 146px;
@@ -381,4 +305,52 @@ hr {
   letter-spacing: 0.025em;
   color: #ffffff;
 }
-/*# sourceMappingURL=style.css.map */
+.sale__primary {
+  display: block;
+}
+.sale__second {
+  display: block;
+  font-family: Lato;
+  font-size: 32.2px;
+  line-height: 1.2;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #ffffff;
+}
+.sale__h3 {
+  font-size: 20px;
+  grid-column: 2;
+  justify-items: center;
+}
+.sale__p {
+  font-family: Lato;
+  font-size: 14px;
+  grid-column: 2;
+  line-height: 24px;
+  color: #fbfbfb;
+}
+.sale__advantages {
+  color: #fbfbfb;
+  background-color: #222224;
+  padding: 40px 30px;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+}
+.sale__icon {
+  margin-right: 34px;
+  width: 47px;
+  grid-column: 1;
+}
+.sale__content {
+  margin-left: 33px;
+}
+.sale__text {
+  margin-left: 33px;
+}
+.sale__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}/*# sourceMappingURL=style.css.map */
