--- a/css/style.css
+++ b/css/style.css
@@ -383,9 +383,12 @@ hr {
   padding-top: 10px;
   font-family: Lato;
   font-size: 16px;
-  width: 45%;
+  width: 70%;
   letter-spacing: 0.025em;
   color: #222224;
+}
+.subscribe__container {
+  width: 50%;
 }
 .subscribe__citate {
   line-height: 26px;
@@ -419,7 +422,6 @@ hr {
 .subscribe__flex {
   display: flex;
   align-items: center;
-  justify-content: center;
   z-index: 2;
   height: 100%;
 }
@@ -431,7 +433,146 @@ hr {
   margin-top: 41px;
   margin-left: 111px;
 }
+.subscribe__legend {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 400;
+  color: #222224;
+  font-family: Lato;
+  margin-bottom: 35px;
+}
+.subscribe__input {
+  width: 334px;
+  height: 46px;
+  background-color: #e1e1e1;
+  border-radius: 23px 0px 0px 23px;
+  border: 1px solid #e1e1e1;
+  padding-left: 28px;
+  box-sizing: border-box;
+}
+.subscribe__send {
+  width: 104px;
+  height: 46px;
+  background-color: #f16d7f;
+  border-radius: 0px 23px 23px 0px;
+  border: 1px solid #f16d7f;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #ffffff;
+}
+.subscribe .legend__primary {
+  font-size: 24px;
+  letter-spacing: 0.025em;
+}
+.subscribe .legend__second {
+  margin-top: 10px;
+  display: block;
+  font-size: 14px;
+  text-transform: none;
+  letter-spacing: 0.025em;
+}
 
 .btn__active {
   background-color: #f16d7f;
+}
+
+.footer .logo {
+  margin-bottom: 29px;
+}
+.footer .logo__text {
+  align-self: center;
+}
+.footer__top {
+  display: flex;
+  margin-bottom: 89px;
+}
+.footer__left {
+  width: 45%;
+}
+.footer__right {
+  display: flex;
+  justify-content: space-around;
+  width: 65%;
+}
+.footer__about {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #898989;
+}
+.footer__space {
+  margin-bottom: 20px;
+}
+.footer__h3 {
+  margin-bottom: 29px;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  font-family: Lato;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  letter-spacing: 0.025em;
+  color: #f16d7f;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.footer__ol {
+  height: 185px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer__li a {
+  text-decoration: none;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #898989;
+}
+.footer__bottom {
+  background-color: #e6e6e6;
+}
+.footer__bottom-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer__cite {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #7a7a7a;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.footer .fa {
+  background-color: #ffffff;
+  margin-left: 8px;
+  text-align: center;
+  width: 32px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  transition: background 0.2s ease;
+}
+.footer .fa:hover {
+  background-color: #f16d7f;
+  color: #ffffff;
+}
+.footer .fa:visited {
+  background-color: #838383;
+}
+.footer__href {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 42px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #b2b2b2;
 }/*# sourceMappingURL=style.css.map */
