--- a/css/style.scss
+++ b/css/style.scss
@@ -56,6 +56,14 @@ hr {
   &__block {
     display: flex;
     height: 38px;
+    z-index: 15;
+    .mega-box {
+      border: none;
+      &::before {
+        border: none;
+        left: 66px;
+      }
+    }
   }
   &__form {
     display: flex;
@@ -636,6 +644,11 @@ hr {
   }
 }
 
+.mega-box_flex {
+  position: absolute;
+  top: 80px !important;
+  display: flex !important;
+}
 .mega-box {
   background-color: #fff;
   border: 1px solid #e8e8e8;
@@ -670,6 +683,7 @@ hr {
   border-bottom: 1px solid #e8e8e8;
   width: 235px;
   padding-bottom: 10px;
+  margin-bottom: 16px;
 }
 
 .mega-link {
@@ -692,6 +706,10 @@ hr {
   &:last-of-type {
     margin-right: 0;
   }
+}
+
+.margin-right-null {
+  margin-right: 0;
 }
 
 .last {
@@ -721,5 +739,103 @@ hr {
 }
 
 .mega-img {
-  margin-top: 22px;
+  margin-top: 20px 17px;
+}
+
+.show {
+  display: block !important;
+}
+
+.cart-menu {
+  display: none;
+  width: 232px;
+  position: absolute;
+  background-color: $bg;
+  padding: 20px 15px;
+  margin-top: 50px;
+  right: auto;
+  &__product {
+    padding: 15px 0;
+    border-bottom: 1px solid rgba(237, 237, 237, 0.74);
+    display: flex;
+    // align-items: center;
+  }
+  &__info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 12px 0 12px 14px;
+  }
+  &__name {
+    font-family: Lato;
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #222222;
+  }
+  &__stars {
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #e4af48;
+    letter-spacing: -2px;
+  }
+  &__price {
+    font-family: Lato;
+    font-size: 12px;
+    line-height: 1.2;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #f16d7f;
+  }
+  &__btn {
+    padding: 0;
+    border: none;
+    background-color: unset;
+    font-family: "Font Awesome";
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #c0c0c0;
+  }
+  &__total {
+    margin: 19px 0 32px 0;
+    display: flex;
+    justify-content: space-between;
+    font-family: Lato;
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #222222;
+  }
+  &__btn-block {
+    display: flex;
+    flex-direction: column;
+  }
+  &__btn-primary {
+    padding: 20px;
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #ffffff;
+    &:hover {
+      transition: all 0.2s ease;
+      background-color: $pink;
+      color: $bg;
+    }
+  }
+  &__checkout {
+    border: 1px solid #f16d7f;
+    color: #f16d7f;
+    margin-bottom: 10px;
+  }
+  &__buy {
+    border: 1px solid #eaeaea;
+    color: #4a4a4a;
+  }
 }
