--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* Reset */
 @import url(/css/reset.css);
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300&family=Roboto+Mono:wght@200&display=swap");
 /* root */
 /* Global */
 body {
