--- a/css/style.scss
+++ b/css/style.scss
@@ -438,7 +438,7 @@ hr {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-image: url(/img/subscribe.png);
+  background-image: url("/img/subscribe.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
