--- a/css/product.css
+++ b/css/product.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .bg {
   background-color: #222224;
 }
@@ -90,7 +89,7 @@
   width: 243px;
 }
 .category__details[open] .fa-caret-down:before {
-  content: "";
+  content: "\f0d8";
   color: #ef5b70;
 }
 .category__details {
@@ -128,7 +127,7 @@
 }
 
 .trending {
-  width: calc(1140px / 4);
+  width: 285px;
 }
 .trending__ol {
   display: flex;
@@ -154,7 +153,7 @@
 }
 
 .size {
-  width: calc(1140px / 4);
+  width: 285px;
 }
 .size__label {
   margin-left: 9px;
@@ -194,7 +193,7 @@
 }
 
 .price {
-  width: calc(1140px / 4);
+  width: 285px;
 }
 .price__flex {
   margin-top: 21px;
