--- a/css/style.css
+++ b/css/style.css
@@ -116,9 +116,15 @@ hr {
   font-weight: 300;
   letter-spacing: 0.025em;
   border: 1px solid #e6e6e6;
+  transition: color 0.2s ease;
 }
 .form__btn:hover {
-  border: 1px solid red;
+  transition: color 0.2s ease;
+  color: white;
+  background-image: linear-gradient(180deg, #f16d7f 0%, #f16d7f 100%);
+}
+.form__btn:hover .fa {
+  color: white;
 }
 
 .arrow {
@@ -142,6 +148,19 @@ hr {
   background-color: #f16d7f;
   border: 1px solid #f16d7f;
   box-sizing: border-box;
+  transition: color 0.4s ease, background-color 0.4s ease;
+}
+.btn__account:hover {
+  background-color: #ffffff;
+  color: #f16d7f;
+}
+
+.hover {
+  transition: color 0.4s ease, background-color 0.4s ease;
+}
+.hover:hover {
+  background-color: #ffffff;
+  color: #f16d7f;
 }
 
 .nav__li {
@@ -308,7 +327,9 @@ hr {
   filter: brightness(40%);
 }
 .featured__card:hover .featured__add {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .featured__browse {
   margin: 0 auto;
@@ -324,6 +345,7 @@ hr {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: solid 1px #f16d7f;
   margin-bottom: 113px;
 }
 .featured__browse .fa {
@@ -585,6 +607,7 @@ hr {
   font-weight: 400;
   letter-spacing: 0.025em;
   color: #898989;
+  transition: color 0.4s ease;
 }
 .footer__li a:hover {
   color: #f16d7f;
