--- a/css/style.scss
+++ b/css/style.scss
@@ -122,8 +122,14 @@ hr {
     font-weight: 300;
     letter-spacing: 0.025em;
     border: 1px solid #e6e6e6;
+    transition: color 0.2s ease;
     &:hover {
-      border: 1px solid red;
+      transition: color 0.2s ease;
+      color: white;
+      background-image: linear-gradient(180deg, $pink 0%, $pink 100%);
+      .fa {
+        color: white;
+      }
     }
   }
 }
@@ -149,9 +155,21 @@ hr {
     background-color: $pink;
     border: 1px solid $pink;
     box-sizing: border-box;
+    transition: color 0.4s ease, background-color 0.4s ease;
+    &:hover {
+      background-color: $bg;
+      color: $pink;
+    }
   }
 }
 
+.hover {
+  transition: color 0.4s ease, background-color 0.4s ease;
+  &:hover {
+    background-color: $bg;
+    color: $pink;
+  }
+}
 .nav {
   &__li {
     position: relative;
@@ -327,7 +345,9 @@ hr {
       filter: brightness(40%);
     }
     &:hover .featured__add {
-      display: block;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
   &__browse {
@@ -344,6 +364,7 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
+    border: solid 1px $pink;
     .fa {
       margin-top: 1px;
       margin-left: 9px;
@@ -633,6 +654,7 @@ hr {
       font-weight: 400;
       letter-spacing: 0.025em;
       color: #898989;
+      transition: color 0.4s ease;
       &:hover {
         color: #f16d7f;
       }
