--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ hr {
   transition: color 0.2s ease;
   color: white;
   background-image: linear-gradient(180deg, #f16d7f 0%, #f16d7f 100%);
+  border-color: #f16d7f;
 }
 .form__btn:hover .fa {
   color: white;
@@ -151,6 +152,7 @@ hr {
   transition: color 0.4s ease, background-color 0.4s ease;
 }
 .btn__account:hover {
+  border-color: #f16d7f;
   background-color: #ffffff;
   color: #f16d7f;
 }
