--- a/css/style.scss
+++ b/css/style.scss
@@ -127,6 +127,7 @@ hr {
       transition: color 0.2s ease;
       color: white;
       background-image: linear-gradient(180deg, $pink 0%, $pink 100%);
+      border-color: $pink;
       .fa {
         color: white;
       }
@@ -157,6 +158,7 @@ hr {
     box-sizing: border-box;
     transition: color 0.4s ease, background-color 0.4s ease;
     &:hover {
+      border-color: $pink;
       background-color: $bg;
       color: $pink;
     }
