--- a/css/style.css
+++ b/css/style.css
@@ -111,17 +111,15 @@ hr {
   line-height: 32px;
   padding: 0px 11px;
   background-color: #cdcdcc;
-  background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: unset;
   font-weight: 300;
   letter-spacing: 0.025em;
   border: 1px solid #e6e6e6;
-  transition: color 0.2s ease;
+  transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease;
 }
 .form__btn:hover {
-  transition: color 0.2s ease;
   color: white;
-  background-image: linear-gradient(180deg, #f16d7f 0%, #f16d7f 100%);
+  background-color: #f16d7f;
   border-color: #f16d7f;
 }
 .form__btn:hover .fa {
@@ -137,6 +135,10 @@ hr {
   border: none;
   margin-right: 26px;
   margin-left: 10px;
+  transition: transform 0.2s ease;
+}
+.btn__cart:hover {
+  transform: scale(110%);
 }
 .btn__account {
   min-width: 123px;
@@ -241,7 +243,11 @@ hr {
   color: #f16d7f;
 }
 .hot__img {
+  transition: transform 0.2s ease;
   position: relative;
+}
+.hot__img:hover {
+  transform: scale(102%);
 }
 .hot__img1 {
   grid-row: 1/2;
@@ -490,9 +496,13 @@ hr {
   height: 4px;
   background-color: #d6d6d6;
   margin-left: 13px;
+  transition: background-color 0.2s ease;
 }
 .subscribe__btn:nth-child(1) {
   margin-left: 0px;
+}
+.subscribe__btn:hover {
+  background-color: #f16d7f;
 }
 .subscribe__flex {
   display: flex;
@@ -547,10 +557,6 @@ hr {
   font-size: 14px;
   text-transform: none;
   letter-spacing: 0.025em;
-}
-
-.btn__active {
-  background-color: #f16d7f;
 }
 
 .footer .logo {
@@ -765,6 +771,9 @@ hr {
   padding: 15px 0;
   border-bottom: 1px solid rgba(237, 237, 237, 0.74);
   display: flex;
+}
+.cart-menu__product img {
+  cursor: pointer;
 }
 .cart-menu__info {
   width: 100%;
